--- a/test.ipynb
+++ b/test.ipynb
@@ -83,10 +83,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'UChXKGgdqnX1wKUrtjt73QHA'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = \"https://www.youtube.com/channel/UChXKGgdqnX1wKUrtjt73QHA\"\n",
+    "c.split('https://www.youtube.com/channel/')[1]"
+   ]
   }
  ],
  "metadata": {
